# panda-dock

./: CMakeLists.txt  main.cpp  mainwindow.cpp
debian/: changelog  control
install/: panda-dock.desktop
item/: appitem.cpp  launcheritem.cpp
translations/: panda-dock_zh_CN.ts
